kubernetes/nginx_controller.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-ingress-controller
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx-ingress
  template:
    metadata:
      name: nginx-ingress
      labels:
        app: nginx-ingress
    spec:
      serviceAccountName: nginx-ingress-serviceaccount
      containers:
      - name: nginx-ingress-controller
        image: nginx/nginx-ingress:latest
        ports:
        - name: http
          containerPort: 80
        - name: https
          containerPort: 443
