kubernetes/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata: 
  name: bc-devops-ingress
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: service-registry-svc
                port:
                  number: 8761
